# majordhome

./: .gitignore  README.md
ApplicationC/App1/: CMakeLists.txt  main.c  main.h  qrCode.c
ApplicationC/App1/AppC1/: AppC1.cbp  AppC1.depend  AppC1.layout  addDataBase.c  addDataBase.h  authentication.c  authentication.h  endProgram.c  endProgram.h  error.c  error.h  form.c  form.h  init.c  init.h  main.c  main.h  menu.c  menu.h  qrCode.c  qrCode.h  research.c  research.h  structures.h
ApplicationC/App1/AppC1/qrCode/: 1CC550123.txt  1CC551128.txt  1CC551169.txt  1CC940679.txt  1FF550220.txt  1FF550223.txt  1FF550245.txt  1HB200154.txt  1HB860134.txt  1JL780991.txt  1MP600128.txt  1MP600161.txt  1MP600192.txt  1PF950238.txt  clara.txt  theo.txt
ApplicationC/App1/qrCode/: clara.txt  de.txt
ApplicationC/AppC1/: AppC1.cscope_file_list  AppC1.depend  AppC1.layout  addDataBase.c  addDataBase.h  authentication.c  authentication.h  endProgram.c  endProgram.h  error.c  form.c  form.h  init.h  main.c  menu.c  menu.h  qrCode.c  qrCode.h  qrcodegen.c  research.c  research.h  structures.h
ApplicationC/AppC2/: addDatabase.c  addDatabase.h  app2.cbp  app2.depend  app2.layout  authentification.c  authentification.h  main.c  main.h  recovery.c  recovery.h
web/: index.php  login.php
web/18_03_2020/: 404.php  index.php  language.php
web/captcha/: image.php
web/css/: booking.css  category.css  createCustomer.css  createSubscription.css  customer.css  headerBack.css  import.css  index.css  login.css  messagesBack.css  payment.css  (+5 more)
web2/: auth.php  calendar.php  index.php
(+241 files in other folders)
